# eddington2

./: .gitattributes  .gitignore  .travis.yml  README.md  appveyor.yml
R/: DESCRIPTION  NAMESPACE  README.md
R/benchmark/: benchmark.cpp
R/loose/: eddington-R6.r  eddington-deprecated.cpp  eddington.r
R/man/: E_sat.Rd
R/package/: .Rbuildignore  .gitignore  (+6 more)
apl/: .gitignore  eddington.apl
awk/: eddington.awk
bash/: eddington-deprecated.sh  eddington.sh
c/: .gitignore  eddington-deprecated.c  eddington-hashmap.c  eddington-tree.c  eddington.c  hashmap.c  hashmap.h  makefile  primes.c  primes.h  read.c  read.h  sort.c  sort.h  test.sh  test_sort.c  tree.c  tree.h  vector.c  vector.h
cpp/: .gitignore  E_num.cpp  EddingtonClass.cpp  EddingtonClass.h  eddington.cpp  makefile  stream.cpp
docs/: CNAME  eddington.js  index.html  style.css
fortran/: .gitignore  eddington.f90  makefile
go/: eddington.go
julia/: eddington.jl  eddington2.jl
lua/: eddington.lua
mock-data/: README.md  ride-gen.r  ride-summary.r  rides.csv
mysql/: eddington.sql  load_data.sql
perl/: eddington.pl
php/: eddington.php
python/: .gitignore  MANIFEST  README.md  eddington-deprecated.py  eddington.py  pyproject.toml  setup.py
python/docs/: eddington.html  index.html  search.js
python/src/: __init__.py  __main__.py  eddington.py
python/test/: test_eddington.py
rust/: Cargo.toml
sas/: eddington.sas
scala/: build.sbt
spark/: .gitignore  eddington-SparkR.r  eddington-spark.py  eddington-spark.sql  eddington-sparklyr.r
tcl/: eddington.tcl
vba/: eddington.vba
(+54 files in other folders)
